--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "puppeteer": "^9.1.1",
     "ng-packagr": "^9.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
@@ -84,8 +85,6 @@
     "@semantic-release/github": "^7.2.0",
     "semantic-release": "^17.4.1"
   },
-
-
   "release": {
     "pkgRoot": "./dist/aem-angular-core-wcm-components"
   }
