--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 12
       - name: Install dependencies
         run: npm ci
+      - name: Build the project
+        run: npm run build-prod
       - name: Release module and publish it in github.com and npmjs.com
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
