--- a/package.json
+++ b/package.json
@@ -87,6 +87,14 @@
     "semantic-release": "^17.4.1"
   },
   "release": {
-    "pkgRoot": "./dist/aem-angular-core-wcm-components"
+    "pkgRoot": "./dist/aem-angular-core-wcm-components",
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      ["@semantic-release/git", {
+        "assets": ["package.json", "dist/aem-angular-core-wcm-components/package.json"]
+      }]
+    ]
   }
 }
