--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
       "@semantic-release/release-notes-generator",
       ["@semantic-release/npm",
         {
-          "pkgRoot": "./dist/aem-angular-core-wcm-components"
+          "pkgRoot": "./dist/aem-angular-core-wcm-components",
+          "prepareCmd": "npm run update-version"
         }
       ],
       [
