--- a/package.json
+++ b/package.json
@@ -83,13 +83,15 @@
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
+    "@semantic-release/exec": "^5.0.0",
     "semantic-release": "^17.4.1"
   },
   "release": {
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      ["@semantic-release/npm",
+      [
+        "@semantic-release/npm",
         {
           "pkgRoot": "./dist/aem-angular-core-wcm-components"
         }
